--- a/ubuntu/.env
+++ b/ubuntu/.env
@@ -2,7 +2,7 @@ export DOCKER_ID="hahlabs"
 export IMAGE_NAME="ubuntu"
 export CONTAINER_NAME="ubuntu"
 export IMAGE_TAG=$DOCKER_ID/$IMAGE_NAME
-export PUSH=skip
+export PUSH=push
 export ENV=alpha
-# export DEBUG=-q
+export DEBUG=-q
 echo $DOCKER_ID/$IMAGE_NAME $CONTAINER_NAME
