Install dev utils to alpha builds

--- a/laravel/.env
+++ b/laravel/.env
@@ -3,6 +3,6 @@ export IMAGE_NAME="laravel"
 export CONTAINER_NAME="hahlabs-app"
 export IMAGE_TAG=$DOCKER_ID/$IMAGE_NAME
 export PUSH=skip
-export ENV=alpha
-export DEBUG=-q
+export ENV=shams
+# export DEBUG=-q
 echo $DOCKER_ID/$IMAGE_NAME $CONTAINER_NAME
