--- a/laravel/.env
+++ b/laravel/.env
@@ -2,7 +2,7 @@ export DOCKER_ID="hahlabs"
 export IMAGE_NAME="laravel"
 export CONTAINER_NAME="hahlabs-app"
 export IMAGE_TAG=$DOCKER_ID/$IMAGE_NAME
-export PUSH=skip
+export PUSH=push
 export ENV=shams
-# export DEBUG=-q
+export DEBUG=-q
 echo $DOCKER_ID/$IMAGE_NAME $CONTAINER_NAME
