Refresh updating scripts

--- a/docker/mysql/.env
+++ b/docker/mysql/.env
@@ -1,8 +1,13 @@
-export DOCKER_ID="hahlabs"
+export ORG_ID="hahlabs"
 export IMAGE_NAME="mysql"
 export CONTAINER_NAME="hahlabs-db"
+export RELEASE=00.08.00
 export IMAGE_TAG=$DOCKER_ID/$IMAGE_NAME
+# push | skip
 export PUSH=push
 export ENV=alpha
-export DEBUG=-q
-echo $DOCKER_ID/$IMAGE_NAME $CONTAINER_NAME
+#export DEBUG=-q
+export DEBUG=
+# valid value "YES"
+export TESTRUN=NO
+echo $ORG_ID/$IMAGE_NAME-$RELEASE $CONTAINER_NAME
