--- a/docker/ubuntu/.env
+++ b/docker/ubuntu/.env
@@ -1,8 +1,13 @@
-export DOCKER_ID="hahlabs"
+export ORG_ID="hahlabs"
 export IMAGE_NAME="ubuntu"
 export CONTAINER_NAME="ubuntu"
-export IMAGE_TAG=$DOCKER_ID/$IMAGE_NAME
+export RELEASE=00.08.00
+export IMAGE_TAG=$ORG_ID/$IMAGE_NAME
+# push | skip
 export PUSH=push
 export ENV=alpha
-export DEBUG=-q
-echo $DOCKER_ID/$IMAGE_NAME $CONTAINER_NAME
+#export DEBUG=-q
+export DEBUG=
+# valid value "YES"
+export TESTRUN=NO
+echo $ORG_ID/$IMAGE_NAME-$RELEASE $CONTAINER_NAME
